tests/golden/type_errors/field_compound_non_number_field.cd
struct Person { name: string }
let p: Person = Person { name: "Ada" };
p.name += 1;
